<resources>
    <string name="app_name">TrackerBat</string>
    <string name="playerListTitleText">Player List Screen</string>
    <string name="gameListScreenTitleText">Game Selection</string>
    <string name="atbatScreenTitleText">At Bat Screen</string>
    <string name="title_activity_update_player">Update Player</string>
    <string name="Question_Mark">"?"</string>
    <string name="First_Name_TxtFld">First Name</string>
    <string name="Player_Number_TxtFld">Player Number</string>
    <string name="Last_Name_TxtFld">Last Name</string>
    <string name="NickNameTxtFld">Nick Name</string>
    <string name="SaveChanges_BTNText">Save Changes</string>
    <string name="AddPlayer_BtnText">Add Player</string>
    <string name="title_activity_at_bat_update_screen">AtBatUpdateScreen</string>
    <string name="title_activity_add_game">Add Game</string>
    <string name="HomeTeam_TxtFld">Team Name</string>
    <string name="VisitorTeam_TxtFld">Away Team</string>
    <string name="InningNumber_TxtFld">Number of Innings</string>
    <string name="EndGameBtn">End Game</string>
    <string name="atbatTitleText">At Bat Overview</string>
    <string name="atBatendAtBatButtonText">End At Bat</string>
    <string name="atBatHitButtonText">Hit</string>
    <string name="atBatWalkButtonText">Walk</string>
    <string name="atBatOutButtonText">Out</string>
    <string name="atBatadvanceBaseButtonText">Advance Base</string>
    <string name="atBatUndoButtonText">Undo</string>
    <string name="atBatFirstBaseButtonText">SINGLE</string>
    <string name="atBatSecondBaseButtonText">DOUBLE</string>
    <string name="atBatThirdBaseButtonText">THIRD </string>
    <string name="atBatHomeBaseButtonText">HOME RUN</string>
    <string name="addInningAtBatSetup">Add Inning</string>
    <string name="title_activity_game_end">GameEnd</string>
    <string name="endGameText">End Game</string>
    <string name="SavePlayerText">Save Player</string>
    <string name="title_activity_out_pop_up">out_pop_up</string>
    <string name="ConfirmOutButtonText">CONFIRM OUT</string>
    <string name="OutPopupSecondField">Second Catcher</string>
    <string name="OutPopupFirstField">First Catcher</string>
    <string name="shortStopButtonText">SS</string>
    <string name="PitcherButtonText">PITCHER</string>
    <string name="FirstCatcherButtonText">FIRST</string>
    <string name="rightFieldButtonText">RIGHT FIELD</string>
    <string name="centerFieldButtonText">CENTER FIELD</string>
    <string name="leftFieldButtonText">LEFT FIELD</string>
    <string name="secondFieldButtonText">SECOND</string>
    <string name="thirdCatcherButtonText">THIRD</string>
    <string name="catcherButtonText">CATCHER</string>
    <string name="helpButton">Help</string>
    <string name="action_settings">settings</string>
</resources>
