<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UI.popupScreens.AddGame">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_HomeTeam_AddGameScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/HomeTeam_TxtFld"
        android:ems="10"
        android:id="@+id/HomeTeam_AddGameScreen" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_AwayTeam_AddGameScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_HomeTeam_AddGameScreen"
        android:layout_alignParentStart="true">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:ems="10"
        android:id="@+id/AwayTeam_AddGameScreen"
        android:hint="@string/VisitorTeam_TxtFld" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_InningNumber_AddGameScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_AwayTeam_AddGameScreen"
        android:layout_alignParentStart="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|textCapWords"
        android:hint="@string/InningNumber_TxtFld"
        android:ems="10"
        android:id="@+id/InningNumber_AddGameScreen" />

</android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addGame_AddGameScreen"
        android:layout_below="@id/layout_InningNumber_AddGameScreen"
 />
</RelativeLayout>
