<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ianshinbro.trackerbat.UI.UpdatePlayer">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_FirstName_UpdatePlayerScreen"
        android:layout_width="match_parent"
        android:layout_below="@+id/saveButton_Update_AddPage"
        android:layout_alignLeft="@id/saveButton_Update_AddPage"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:ems="10"
        android:id="@+id/FirstName_UpdatePlayerScreen"
        android:hint="@string/First_Name_TxtFld"
        android:layout_below="@+id/saveButton_Update_AddPage"
        android:width="150dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_LastName_UpdatePlayerScreen"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_FirstName_UpdatePlayerScreen"
        android:layout_alignLeft="@id/saveButton_Update_AddPage"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/Last_Name_TxtFld"
        android:ems="10"
        android:id="@+id/LastName_UpdatePlayerScreen"
        android:layout_centerHorizontal="true"
        android:width="150dp" />
</android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton_Update_AddPage"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="66dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_NickName_UpdatePlayerScreen"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_LastName_UpdatePlayerScreen"
        android:layout_alignLeft="@id/saveButton_Update_AddPage"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/NickNameTxtFld"
        android:ems="10"
        android:id="@+id/NickName_UpdatePlayerScreen"
        android:layout_alignParentStart="true"
        android:width="150dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_PlayerNumber_UpdatePlayerScreen"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_NickName_UpdatePlayerScreen"
        android:layout_alignLeft="@id/saveButton_Update_AddPage"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|textCapWords"
        android:ems="10"
        android:id="@+id/PlayerNumber_UpdatePlayerScreen"
        android:hint="@string/Player_Number_TxtFld"
        android:layout_alignParentStart="true"
        android:width="150dp" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
